<resources>
    <string name="app_name">PrestartCheck</string>
    <string name="title_activity_main">PrestartCheck</string>
    <string name="next">Next</string>
    <string name="test">Test</string>
    <string name="previous">Previous</string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name:</string>
    <string name="machine">Machine:</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="summary">Summary</string>
    <string name="export">Export</string>
    <string name="operator">Operator:</string>
    <string name="image">Image</string>
    <string name="button_label_email">Email</string>
    <string name="button_label_close">Close</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="risk_warning">Do you accept the risks associated with operating the machine in the current state ? (Please note that it is your responsibility to ensure that the machine is safe to operate).</string>
    <string name="page_title_main">Login</string>
    <string name="settings_caption_machine_name">Enter the name of the machine</string>
    <string name="settings_caption_shift_time">Enter the maximum amount of time between shifts that a user can be logged in for (hours)</string>
    <string name="settings_caption_button_save">Save</string>
    <string name="settings_caption_button_saved_massage">Settings saved.</string>
    <string name="settings_caption_lock_timeout">Specify the seconds that an operator has to answer a question before the machine is locked</string>
    <string name="settings_caption_expected_answer">Expected answer:</string>
    <string name="settings_caption_expected_neg_answer">Expected negative answer:</string>
    <string name="settings_caption_requires_response">Requires an answer:</string>
    <string name="settings_error_machine_name">Please enter the name of the machine.</string>
    <string name="settings_error_shift_duration">Invalid shift duration.</string>
    <string name="settings_error_interlock_timeout">Invalid interlock timeout.</string>
    <string name="settings_error_machine_operating_hours">Invalid time betweeen shifts. Specify hours up to 24.</string>
    <string name="settings_company_logo">Company logo:</string>
    <string name="settings_company_logo_button">Browse</string>
    <string name="settings_plc_op_hours_label">Operating hours stored in the PLC:</string>
    <string name="settings_company_logo_camera">Camera</string>
    <string name="settings_machine_operating_hours">Enter the maximum amount of time between shifts that a user can be logged in for (operating hours)</string>
    <string name="settings_plc_op_hours_set">Operating hours set in the interlock device</string>
    <string name="drawer_navigation_title_home">Questions</string>
    <string name="drawer_navigation_title_settings">Setting</string>
    <string name="drawer_navigation_title_question">Admin - Questions</string>
    <string name="drawer_navigation_title_sections">Admin - Sections</string>
    <string name="drawer_navigation_title_report">Reports</string>
    <string name="drawer_navigation_title_users">Users</string>
    <string name="drawer_navigation_title_interlock_device">Interlock device</string>
    <string name="operator_add_caption_first_name">First Name</string>
    <string name="operator_add_caption_last_name">Last Name</string>
    <string name="operator_add_caption_pin">Pin</string>
    <string name="operator_add_caption_enabled">Enable:</string>
    <string name="operator_add_caption_last_login">Last Login:</string>
    <string name="operator_add_caption_created">Created:</string>
    <string name="validation_message_operator_add_missing_first_name">First name must not be empty!</string>
    <string name="validation_message_operator_add_missing_last_name">Last name must not be empty!</string>
    <string name="validation_message_pin_number">PIN number must be at least 4 numbers!</string>
    <string name="fragment_login_caption">Please Enter your PIN code to proceed</string>
    <string name="fragment_login_caption_login">Loggin in</string>
    <string name="error_message_wrong_pin">You entered the wrong pin!</string>
    <string name="fragment_question_options_expand_photos">Click Photo to Expand</string>
    <string name="fragment_question_options_button_no_expected_answer">No expected answer</string>
    <string name="fragment_question_options_button_option_1">Option 1</string>
    <string name="fragment_question_options_button_option_2">Option 2</string>
    <string name="fragment_question_options_button_option_none">None of the above</string>
    <string name="fragment_question_acknowledgement_process_button">Proceed</string>
    <string name="fragment_logout_button_logout">Logout</string>
    <string name="fragment_logout_title">Logout</string>
    <string name="fragment_logout_login_date_time_label">Logged in</string>
    <string name="fragment_sections_title">Select a section to modify it or tap + to add an additional section</string>
    <string name="fragment_question_admin_start_title">Select the Section to view / add Questions</string>
    <string name="fragment_question_admin_questions">Select a question to Edit or Tap +  to add</string>
    <string name="fragment_interlock_device_state">Interlock device is closed (machine on):</string>
    <string name="fragment_interlock_device_client_node">FINS Client node:</string>
    <string name="fragment_interlock_device_server_node">FINS Server node:</string>
    <string name="fragment_interlock_device_bypass_button_title">Email bypass entries</string>
    <string name="fragment_interlock_device_button_connect">Connect</string>
    <string name="fragment_interlock_device_button_disconnect">Disconnect</string>
    <string name="fragment_interlock_device_bypass_close">Close</string>
    <string name="fragment_interlock_device_bypass_read">Check interlock state</string>
    <string name="fragment_interlock_device_bypass_open">Open</string>
    <string name="fragment_interlock_device_bypass_heartbeat">Send heart beat</string>
    <string name="fragment_interlock_nav_title">Interlock device</string>
    <string name="nav_sections_label">Admin - Section Setup</string>
    <string name="nav_question_admin_start">Admin - Question Setup</string>
    <string name="nav_question_admin_questions">Admin - Question Setup</string>
    <string name="nav_question_admin_question_yesno">Admin - Question Setup</string>
    <string name="nav_question_admin_question_mul">Admin - Question Setup</string>
    <string name="nav_question_admin_question_options">Admin - Question Setup</string>
    <string name="nav_question_admin_question_ack">Admin - Question Setup</string>
    <string name="nav_settings_email_server">Email Server</string>
    <string name="nav_settings_email_report_admin">Admin - Email/Report Setup</string>
    <string name="nav_settings_reporting_options">Questing Reporting Options</string>
    <string name="nav_settings_bypass_reporting_options">Bypass Reporting Options</string>
    <string name="nav_settings_interlock_device_setup">Admin - Interlock Device Setup</string>
    <string name="nav_settings_users">Admin - Users</string>
    <string name="nav_home_title"></string>
    <string name="fragment_question_admin_title">Title</string>
    <string name="fragment_question_admin_comment">Comment</string>
    <string name="fragment_question_admin_sequence">Question Number:</string>
    <string name="fragment_question_admin_pos_neg">Allow positive and negative questions</string>
    <string name="fragment_question_admin_enabled">Question active</string>
    <string name="fragment_question_admin_is_critical">Incorrect answer stops question process ?</string>
    <string name="fragment_question_admin_enable_machine">Question requires machine to be enabled ?</string>
    <string name="fragment_question_admin_timeout">Question Timeout (mins)</string>
    <string name="fragment_question_admin_button_cancel">Cancel</string>
    <string name="fragment_question_admin_button_ok">OK</string>
    <string name="fragment_question_admin_button_delete">Delete</string>
    <string name="fragment_question_admin_neg_text">Negative text:</string>
    <string name="fragment_question_admin_neg_comment">Negative text comment:</string>
    <string name="fragment_question_admin_custom_field_1">Values (CSV)</string>
    <string name="fragment_question_admin_option_1">Option 1</string>
    <string name="fragment_question_admin_option_2">Option 2</string>
    <string name="fragment_question_admin_option_none">Option none</string>
    <string name="fragment_question_admin_is_random">Randomize options</string>
    <string name="fragment_question_admin_image_title">Image:</string>
    <string name="fragment_question_admin_image_button_browse">Browse</string>
    <string name="fragment_question_admin_image_clear">Clear</string>
    <string name="caption_settings_email_server">Email server details:</string>
    <string name="caption_settings_email_server_from_address">From address:</string>
    <string name="caption_settings_email_server_smtp">SMTP server:</string>
    <string name="caption_settings_email_server_smtp_port">Port:</string>
    <string name="caption_settings_email_server_smtp_invalid_port">Invalid port number.</string>
    <string name="caption_settings_email_server_security_type">Security Type:</string>
    <string name="caption_settings_email_server_requires_sign_in">Requires sign-in</string>
    <string name="caption_settings_email_server_user_name">Username:</string>
    <string name="caption_settings_email_server_password">Password:</string>
    <string name="caption_settings_email_server_test">Test</string>
    <string name="caption_settings_interlock_device_ip">Interlock device IP address or hostname</string>
    <string name="caption_settings_to_email_pop_up_title">Test Email</string>
    <string name="caption_settings_to_email_pop_up_message">Change test email</string>
    <string name="fragment_settings_interlock_device_fin_node_title">FINS node number:</string>
    <string name="fragment_settings_interlock_device_fin_alt_node_title">Alt FINS node number:</string>
    <string name="fragment_settings_interlock_device_test_button">TEST</string>
        <string name="fragment_settings_interlock_device_test_result_sucess">Connected to the interlock device!.</string>
    <string name="fragment_settings_interlock_device_test_result_failed">Unable to connect to the interlock device. Check your settings.</string>
    <string name="fragment_settings_reporting_option_message_one">** Note: ONE email address per recipient.</string>
    <string name="fragment_settings_reporting_option_recipient_1">Recipient 1</string>
    <string name="fragment_settings_reporting_option_recipient_2">Recipient 2</string>
    <string name="fragment_settings_reporting_option_recipient_3">Recipient 3</string>
    <string name="fragment_settings_reporting_option_recipient_4">Recipient 4</string>
    <string name="fragment_settings_reporting_option_frequency">Report frequency</string>
    <string name="fragment_settings_reporting_email_responses">Email responses.</string>
    <string name="fragment_settings_reporting_email_bypasses">Email bypasses.</string>
    <string name="alert_machine_operation">WARNING: The machine is running for this question. Press OK to proceed.</string>
    <string name="question_title_empty_message">Question text cannnot be empty.</string>
    <string name="question_alt_title_empty_message">Question negative text cannnot be empty.</string>
    <string name="question_invalid_number">Question number must be an integer.</string>
    <string name="unexpected_resp_label">Unexpected responses:</string>
    <string name="fragment_add_user_title">Add user</string>
</resources>