<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.mb.prestartcheck.console.FragmentHome"
        android:label="@string/nav_home_title"
        tools:layout="@layout/fragment_home"
    >
        <action
            android:id="@+id/action_nav_home_to_nav_user_add"
            app:destination="@id/nav_user_add" />
        <action
            android:id="@+id/action_nav_home_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mb.prestartcheck.console.FragmentSettings"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_user_add"
        android:name="com.mb.prestartcheck.console.FragmentUserAdd"
        android:label="@string/fragment_add_user_title"
        tools:layout="@layout/fragment_user_add" >
        <argument
            android:name="user_id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.mb.prestartcheck.console.FragmentLogin"
        android:label="@string/page_title_main"
        tools:layout="@layout/fragment_login" >
        <argument
            android:name="user_id"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/nav_section_cover"
        android:name="com.mb.prestartcheck.console.FragmentSectionCover"
        android:label="{section_title}"
        tools:layout="@layout/fragment_section_cover" />

    <fragment
        android:id="@+id/nav_question_yes_no"
        android:name="com.mb.prestartcheck.console.FragmentQuestionYesNo"
        android:label="{section_title}"
        tools:layout="@layout/fragment_question_yes_no" />

    <fragment
        android:id="@+id/nav_question_multiple_choice"
        android:name="com.mb.prestartcheck.console.FragmentQuestionMultipleChoice"
        android:label="{section_title}"
        tools:layout="@layout/fragment_question_multiple_choice" />

    <fragment
        android:id="@+id/nav_question_options"
        android:name="com.mb.prestartcheck.console.FragmentQuestionOptions"
        android:label="{section_title}"
        tools:layout="@layout/fragment_question_options" />

    <fragment
        android:id="@+id/nav_question_ack"
        android:name="com.mb.prestartcheck.console.FragmentQuestionAcknowledgement"
        android:label="{section_title}"
        tools:layout="@layout/fragment_question_acknowledgement" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.mb.prestartcheck.console.FragmentLogout"
        android:label=""
        tools:layout="@layout/fragment_question_acknowledgement" >
        <action
            android:id="@+id/action_nav_logout_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_sections"
        android:name="com.mb.prestartcheck.console.FragmentSections"
        android:label="@string/nav_sections_label"
        tools:layout="@layout/fragment_sections" />

    <fragment
        android:id="@+id/nav_section_edit"
        android:name="com.mb.prestartcheck.console.FragmentSectionEdit"
        android:label="{title}"
        tools:layout="@layout/fragment_section_edit"/>

    <fragment
        android:id="@+id/nav_question_admin_start"
        android:name="com.mb.prestartcheck.console.FragmentQuestionAdminStart"
        android:label="@string/nav_question_admin_start"
        tools:layout="@layout/fragment_question_admin_start">
        <action  android:id="@+id/action_question_admin_start_to_questions"
            app:destination="@id/nav_question_admin_questions"></action>


    </fragment>

    <fragment
        android:id="@+id/nav_question_admin_questions"
        android:name="com.mb.prestartcheck.console.FragmentQuestionAdminQuestions"
        android:label="{section_title}"
        tools:layout="@layout/fragment_question_admin_questions">
        <argument
            android:name="section_id"
            app:argType="long"
            android:defaultValue="-1L" />
        <argument
            android:name="section_title"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="Question - admin" />
    </fragment>

    <fragment
        android:id="@+id/nav_question_admin_yesno"
        android:name="com.mb.prestartcheck.console.FragmentQuestionAdminYesNo"
        android:label="@string/nav_question_admin_question_yesno"
        tools:layout="@layout/fragment_question_admin_yes_no">
    </fragment>

    <fragment
        android:id="@+id/nav_question_admin_mul"
        android:name="com.mb.prestartcheck.console.FragmentQuestionAdminMul"
        android:label="@string/nav_question_admin_question_mul"
        tools:layout="@layout/fragment_question_admin_mul">
    </fragment>

    <fragment
        android:id="@+id/nav_question_admin_options"
        android:name="com.mb.prestartcheck.console.FragmentQuestionAdminOptions"
        android:label="@string/nav_question_admin_question_options"
        tools:layout="@layout/fragment_question_admin_options">
    </fragment>

    <fragment
        android:id="@+id/nav_question_admin_ack"
        android:name="com.mb.prestartcheck.console.FragmentQuestionAdminAck"
        android:label="@string/nav_question_admin_question_ack"
        tools:layout="@layout/fragment_question_admin_ack">
    </fragment>

    <fragment
        android:id="@+id/nav_settings_email_server"
        android:name="com.mb.prestartcheck.console.FragmentSettingsEmailServer"
        android:label="@string/nav_settings_email_server"
        tools:layout="@layout/fragment_settings_email_server">
    </fragment>

    <fragment
        android:id="@+id/nav_settings_email_report_admin"
        android:name="com.mb.prestartcheck.console.FragmentSettingsEmailReportAdmin"
        android:label="@string/nav_settings_email_report_admin"
        tools:layout="@layout/fragment_settings_email_report_admin">
        <action
            android:id="@+id/action_nav_settings_email_report_admin_to_nav_settings_email_details"
            app:destination="@id/nav_settings_email_server" />
        <action
            android:id="@+id/action_nav_settings_email_report_admin_to_nav_settings_reporting_options"
            app:destination="@id/nav_settings_reporting_options" />
        <action
            android:id="@+id/action_nav_settings_email_report_admin_to_nav_settings_bypass_reporting_options"
            app:destination="@id/nav_settings_bypass_reporting_options" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings_reporting_options"
        android:name="com.mb.prestartcheck.console.FragmentSettingsReportingOptions"
        android:label="@string/nav_settings_reporting_options"
        tools:layout="@layout/fragment_settings_reporting_options">
    </fragment>

    <fragment
        android:id="@+id/nav_settings_bypass_reporting_options"
        android:name="com.mb.prestartcheck.console.FragmentSettingsBypassReportingOptions"
        android:label="@string/nav_settings_bypass_reporting_options"
        tools:layout="@layout/fragment_settings_bypass_reporting_options">
    </fragment>

    <fragment
        android:id="@+id/nav_settings_interlock_device"
        android:name="com.mb.prestartcheck.console.FragmentSettingsInterlockDevice"
        android:label="@string/nav_settings_interlock_device_setup"
        tools:layout="@layout/fragment_settings_interlock_device">
    </fragment>
    <fragment
        android:id="@+id/nav_login_supervisor"
        android:name="com.mb.prestartcheck.console.FragmentLoginSupervisor"
        android:label="Login Supervisor"
        tools:layout="@layout/fragment_login_supervisor">
        <action
            android:id="@+id/action_nav_login_supervisor_to_nav_risk_notice"
            app:destination="@id/nav_risk_notice" />
        <action
            android:id="@+id/action_nav_login_supervisor_to_nav_logout"
            app:destination="@id/nav_logout" />
        <argument
            android:name="show_risk_notice"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_risk_notice"
        android:name="com.mb.prestartcheck.console.FragmentRiskNotice"
        android:label="Risk Noticer"
        tools:layout="@layout/fragment_risk_notice">
        <argument
            android:name="supervisor_id"
            app:argType="long" />
    </fragment>


    <fragment
        android:id="@+id/nav_summary"
        android:name="com.mb.prestartcheck.console.FragmentSummary"
        android:label="Summary"
        tools:layout="@layout/fragment_summary">
        <action
            android:id="@+id/action_nav_summary_to_nav_login_supervisor"
            app:destination="@id/nav_login_supervisor" />
    </fragment>

    <fragment
        android:id="@+id/nav_report"
        android:name="com.mb.prestartcheck.console.FragmentReport"
        android:label="Reports"
        tools:layout="@layout/fragment_report">
    </fragment>

    <fragment
        android:id="@+id/nav_question_type"
        android:name="com.mb.prestartcheck.console.FragmentQuestionAdminNew"
        android:label="Question Type"
        tools:layout="@layout/fragment_question_type">
    </fragment>

    <fragment
        android:id="@+id/nav_setting_users"
        android:name="com.mb.prestartcheck.console.FragmentSettingsUsers"
        android:label="@string/nav_settings_users"
        tools:layout="@layout/fragment_settings_users">
        <action
            android:id="@+id/action_nav_setting_users_to_nav_user_add"
            app:destination="@id/nav_user_add" />
    </fragment>

    <fragment
        android:id="@+id/nav_interlock_device"
        android:name="com.mb.prestartcheck.console.FragmentInterlockDevice"
        android:label="@string/fragment_interlock_nav_title"
        tools:layout="@layout/fragment_interlock_device">

    </fragment>
    <fragment
        android:id="@+id/nav_image_select"
        android:name="com.mb.prestartcheck.console.FragmentImageSelect"
        android:label="{section_title}"
        tools:layout="@layout/fragment_image_select_fragment">

    </fragment>

</navigation>